crates/bevy_derive/compile_fail/tests/deref_derive/invalid_item_fail.rs
use bevy_derive::Deref;

#[derive(Deref)]
//~^ ERROR: cannot be derived on field-less structs
struct UnitStruct;

#[derive(Deref)]
//~^ ERROR: can only be derived on structs
enum Enum {}
