crates/bevy_derive/compile_fail/tests/deref_derive/invalid_item_fail.stderr
error: Deref cannot be derived on field-less structs
 --> tests/deref_derive/invalid_item_fail.rs:3:10
  |
3 | #[derive(Deref)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Deref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Deref can only be derived on structs
 --> tests/deref_derive/invalid_item_fail.rs:7:10
  |
7 | #[derive(Deref)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Deref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

